--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Marvel": {
+    "API_KEY": {
+      "PUBLIC": "9103478f064393d0abbd1e1da6ce0f5f",
+      "PRIVATE": "16d963da20632883d67b5552a40f610027b2aa1b"
+    }
+  },
   "AllowedHosts": "*"
 }
